--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
        "(51612, 95)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "0.6293939430565123"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
        "       [ 5408, 11710]], dtype=int64)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -890,7 +890,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
        "0.6277008271188627"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "       [ 6253, 10865]], dtype=int64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +997,7 @@
        "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1045,7 @@
        "0.6277008271188627"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "       [ 5408, 11710]], dtype=int64)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1101,6 +1101,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
+    "from imblearn.metrics import classification_report_imbalanced\n",
     "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
@@ -1123,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1132,7 +1133,7 @@
        "Counter({'high_risk': 68460, 'low_risk': 62011})"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1157,7 +1158,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1181,7 @@
        "0.6411460410698961"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1203,7 +1204,7 @@
        "       [7170, 9948]], dtype=int64)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
